<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="memory_clear">MC</string>
    <string name="memory_read">MR</string>
    <string name="memory_save">MS</string>
    <string name="memory_plus">M+</string>
    <string name="memory_minus">M-</string>
    <string name="backspace">←</string>
    <string name="ce_string">CE</string>
    <string name="c_string">C</string>
    <string name="plus_minus_symbol">±</string>
    <string name="root_symbol">√</string>
    <string name="onebyx">1/x</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="dot_symbol">,</string>
    <string name="division_symbol">/</string>
    <string name="multiply_symbol">*</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="assign_symbol">=</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
