<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" tools:context="dan.simplecalc.ButtonFragment">

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number1"
            android:id="@+id/button1"
            android:layout_row="1"
            android:layout_column="0" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number2"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="1" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number3"
            android:id="@+id/button3"
            android:layout_row="1"
            android:layout_column="2" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_symbol"
            android:id="@+id/buttonDivide"
            android:layout_row="1"
            android:layout_column="3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onebyx"
        android:id="@+id/buttonOneByX"
        android:layout_row="1"
        android:layout_column="4" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_read"
            android:id="@+id/buttonMemoryRead"
            android:layout_row="1"
            android:layout_column="5" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number4"
            android:id="@+id/button4"
            android:layout_row="2"
            android:layout_column="0" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number5"
        android:id="@+id/button5"
        android:layout_row="2"
        android:layout_column="1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number6"
        android:id="@+id/button6"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_symbol"
        android:id="@+id/buttonMultiply"
        android:layout_row="2"
        android:layout_column="3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="133dp"
        android:text="@string/assign_symbol"
        android:id="@+id/buttonAssign"
        android:layout_row="2"
        android:layout_column="4"
        android:layout_rowSpan="3" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_save"
            android:id="@+id/buttonMemorySave"
            android:layout_row="2"
            android:layout_column="5" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number7"
            android:id="@+id/button7"
            android:layout_row="3"
            android:layout_column="0" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number8"
            android:id="@+id/button8"
            android:layout_row="3"
            android:layout_column="1" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number9"
            android:id="@+id/button9"
            android:layout_row="3"
            android:layout_column="2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus_symbol"
        android:id="@+id/buttonMinus"
        android:layout_row="3"
        android:layout_column="3" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_plus"
            android:id="@+id/buttonMemoryPlus"
            android:layout_row="3"
            android:layout_column="5" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/number0"
            android:id="@+id/button0"
            android:layout_row="4"
            android:layout_column="0"
        android:layout_columnSpan="2" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot_symbol"
            android:id="@+id/buttonDot"
            android:layout_row="4"
            android:layout_column="2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_symbol"
        android:id="@+id/buttonPlus"
        android:layout_row="4"
        android:layout_column="3" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_minus"
            android:id="@+id/buttonMemoryMinus"
            android:layout_row="4"
            android:layout_column="5" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backspace"
            android:id="@+id/buttonBackspace"
            android:layout_row="0"
            android:layout_column="0" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ce_string"
            android:id="@+id/buttonClearEntry"
            android:layout_row="0"
            android:layout_column="1" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_string"
            android:id="@+id/buttonClear"
            android:layout_row="0"
            android:layout_column="2" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_minus_symbol"
            android:id="@+id/buttonPlusMinus"
            android:layout_row="0"
            android:layout_column="3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/root_symbol"
        android:id="@+id/buttonRoot"
        android:layout_row="0"
        android:layout_column="4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_clear"
        android:id="@+id/buttonMemoryClear"
        android:layout_row="0"
        android:layout_column="5" />

</GridLayout>
